--- a/build.config
+++ b/build.config
@@ -232,7 +232,7 @@ CONFIG_FIRMWARE_INCLUDE_DOH=y
 CONFIG_FIRMWARE_INCLUDE_WPAD=y
 
 ### Include compressed memory support
-#CONFIG_FIRMWARE_INCLUDE_ZRAM=y
+CONFIG_FIRMWARE_INCLUDE_ZRAM=y
 
 ### Add adb package
 #CONFIG_FIRMWARE_INCLUDE_ADB=y
