--- a/build.config
+++ b/build.config
@@ -30,7 +30,7 @@ CONFIG_FIRMWARE_ENABLE_IPV6=y
 CONFIG_FIRMWARE_ENABLE_USB=y
 
 ### Enable FAT/FAT32 filesystem support. ~0.1MB
-#CONFIG_FIRMWARE_ENABLE_FAT=y
+CONFIG_FIRMWARE_ENABLE_FAT=y
 
 ### Enable exFAT (FAT/FAT32 too) filesystem support. ~0.12MB
 CONFIG_FIRMWARE_ENABLE_EXFAT=y
@@ -131,6 +131,9 @@ CONFIG_FIRMWARE_INCLUDE_U2EC=y
 ### Include "tcpdump" utility. ~0.6MB
 CONFIG_FIRMWARE_INCLUDE_TCPDUMP=y
 
+### Include "socat" utility
+#CONFIG_FIRMWARE_INCLUDE_SOCAT=y
+
 ### Include "hdparm" utility (allow set HDD spindown timeout and APM). ~0.1MB
 CONFIG_FIRMWARE_INCLUDE_HDPARM=y
 
@@ -155,6 +158,9 @@ CONFIG_FIRMWARE_INCLUDE_RPL2TP=y
 
 ### Include EAP-TTLS and EAP-PEAP authentication support. openssl ~1.2MB, wpa_supplicant +0.04MB
 CONFIG_FIRMWARE_INCLUDE_EAP_PEAP=y
+
+### Include HTTPS support for DDNS client. openssl ~1.2MB
+CONFIG_FIRMWARE_INCLUDE_DDNS_SSL=y
 
 ### Include HTTPS support. openssl ~1.2MB
 CONFIG_FIRMWARE_INCLUDE_HTTPS=y
@@ -192,9 +198,6 @@ CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
 ### Include Minidlna UPnP mediaserver. ~1.6MB
 CONFIG_FIRMWARE_INCLUDE_MINIDLNA=y
 
-### Include ffmpeg for Minidlna. ~0.1MB
-CONFIG_FIRMWARE_INCLUDE_FFMPEG_NEW=y
-
 ### Include Transmission torrent. openssl ~1.2MB, transmission ~1.5MB
 CONFIG_FIRMWARE_INCLUDE_TRANSMISSION=y
 
@@ -215,6 +218,9 @@ CONFIG_FIRMWARE_INCLUDE_TOR_GEOIP=y
 
 ### Include IPv6 GeoIP database info for TOR proxy ~0.6MB
 #CONFIG_FIRMWARE_INCLUDE_TOR_GEOIPV6=y
+
+### Include OBFS4 for TOR
+#CONFIG_FIRMWARE_INCLUDE_OBFS4=y
 
 ### Include Privoxy proxy ~0.3MB
 CONFIG_FIRMWARE_INCLUDE_PRIVOXY=y
@@ -238,7 +244,7 @@ CONFIG_FIRMWARE_INCLUDE_ZRAM=y
 #CONFIG_FIRMWARE_INCLUDE_ADB=y
 
 ### Include LUA support ~0.2MB
-#CONFIG_FIRMWARE_INCLUDE_LUA=y
+CONFIG_FIRMWARE_INCLUDE_LUA=y
 
 ### Include EoIP Ethernet Tunnels over IP ~0.01MB
 CONFIG_FIRMWARE_INCLUDE_EOIP=y
@@ -254,3 +260,4 @@ CONFIG_FIRMWARE_INCLUDE_IPERF3=y
 
 ### Include mt7621_cpufreq support ~0.005MB
 #CONFIG_FIRMWARE_INCLUDE_MT7621_CPUFREQ=y
+
