--- a/build.config
+++ b/build.config
@@ -39,7 +39,7 @@ CONFIG_FIRMWARE_ENABLE_EXFAT=y
 #CONFIG_FIRMWARE_ENABLE_EXT2=y
 
 ### Enable EXT3 filesystem support. ~0.2MB
-#CONFIG_FIRMWARE_ENABLE_EXT3=y
+CONFIG_FIRMWARE_ENABLE_EXT3=y
 
 ### Enable EXT4 (EXT3/2 too) filesystem support. ~0.4MB
 CONFIG_FIRMWARE_ENABLE_EXT4=y
@@ -72,7 +72,7 @@ CONFIG_FIRMWARE_INCLUDE_AUDIO=y
 CONFIG_FIRMWARE_INCLUDE_XFRM=y
 
 ### Include network QoS scheduling modules. ~0.2MB
-CONFIG_FIRMWARE_INCLUDE_QOS=y
+#CONFIG_FIRMWARE_INCLUDE_QOS=y
 
 ### Include IMQ module for shapers (a bit of performance degradation). ~0.02MB
 #CONFIG_FIRMWARE_INCLUDE_IMQ=y
@@ -107,6 +107,7 @@ CONFIG_FIRMWARE_INCLUDE_SHORTCUT_FE=y
 
 ### Include WebUI international resources. Increased firmware size
 CONFIG_FIRMWARE_INCLUDE_LANG_BR=y
+#CONFIG_FIRMWARE_INCLUDE_LANG_CN=y
 #CONFIG_FIRMWARE_INCLUDE_LANG_CZ=y
 #CONFIG_FIRMWARE_INCLUDE_LANG_DA=y
 #CONFIG_FIRMWARE_INCLUDE_LANG_DE=y
@@ -131,8 +132,11 @@ CONFIG_FIRMWARE_INCLUDE_U2EC=y
 ### Include "tcpdump" utility. ~0.6MB
 CONFIG_FIRMWARE_INCLUDE_TCPDUMP=y
 
-### Include "socat" utility
+### Include "socat" utility ~0.3MB
 #CONFIG_FIRMWARE_INCLUDE_SOCAT=y
+
+### Include "ndisc6" and "rdisc6" utilities ~0.27MB
+CONFIG_FIRMWARE_INCLUDE_NDISC6_RDISC6=y
 
 ### Include "hdparm" utility (allow set HDD spindown timeout and APM). ~0.1MB
 CONFIG_FIRMWARE_INCLUDE_HDPARM=y
@@ -186,6 +190,9 @@ CONFIG_FIRMWARE_INCLUDE_SSWAN=y
 ### Include Wireguard VPN module and utilite
 CONFIG_FIRMWARE_INCLUDE_WIREGUARD=y
 
+### Include AmneziaWG kernel module
+CONFIG_FIRMWARE_INCLUDE_AMNEZIAWG=y
+
 ### Include Elliptic Curves (EC) to openssl library. ~0.1MB
 CONFIG_FIRMWARE_INCLUDE_OPENSSL_EC=y
 
@@ -219,7 +226,7 @@ CONFIG_FIRMWARE_INCLUDE_TOR_GEOIP=y
 ### Include IPv6 GeoIP database info for TOR proxy ~0.6MB
 #CONFIG_FIRMWARE_INCLUDE_TOR_GEOIPV6=y
 
-### Include OBFS4 for TOR
+### Include OBFS4 for TOR ~6.1MB
 #CONFIG_FIRMWARE_INCLUDE_OBFS4=y
 
 ### Include Privoxy proxy ~0.3MB
@@ -261,3 +268,8 @@ CONFIG_FIRMWARE_INCLUDE_IPERF3=y
 ### Include mt7621_cpufreq support ~0.005MB
 #CONFIG_FIRMWARE_INCLUDE_MT7621_CPUFREQ=y
 
+### Include NFQWS support ~0.1MB
+#CONFIG_FIRMWARE_INCLUDE_NFQWS=y
+
+### Reduce trx image size
+CONFIG_CC_OPTIMIZE_FOR_SIZE=y
