--- a/build.config
+++ b/build.config
@@ -126,8 +126,11 @@ CONFIG_FIRMWARE_INCLUDE_NTFS_3G=y
 ### Include LPR printer daemon. ~0.12MB
 CONFIG_FIRMWARE_INCLUDE_LPRD=y
 
-### Include USB-over-Ethernet printer daemon. ~0.05MB
+### Include ASUS/Eltima USB-over-Ethernet printer daemon. ~0.05MB
 CONFIG_FIRMWARE_INCLUDE_U2EC=y
+
+### Include USB-over-IP daemon. ~0.05MB
+#CONFIG_FIRMWARE_INCLUDE_USBIP=y
 
 ### Include "tcpdump" utility. ~0.6MB
 CONFIG_FIRMWARE_INCLUDE_TCPDUMP=y
@@ -136,7 +139,7 @@ CONFIG_FIRMWARE_INCLUDE_TCPDUMP=y
 #CONFIG_FIRMWARE_INCLUDE_SOCAT=y
 
 ### Include "ndisc6" and "rdisc6" utilities ~0.27MB
-CONFIG_FIRMWARE_INCLUDE_NDISC6_RDISC6=y
+#CONFIG_FIRMWARE_INCLUDE_NDISC6_RDISC6=y
 
 ### Include "hdparm" utility (allow set HDD spindown timeout and APM). ~0.1MB
 CONFIG_FIRMWARE_INCLUDE_HDPARM=y
